--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,17 +13,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <EditText
-        android:background="@drawable/edittext_background"
+    <TextView
+        android:background="@drawable/searchingbar_background"
+        android:textSize="20dp"
         android:elevation="4dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:paddingStart="20dp"
+        android:paddingTop="15dp"
         android:hint="장소, 버스, 지하철, 주소 검색"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:id="@+id/EditTextSearchingBar"/>
+        android:id="@+id/searchingBar"/>
 
     <!-- 개발중 축척 조절을 위한 SeekBar -->
     <SeekBar
@@ -37,15 +39,4 @@
         android:layout_marginBottom="50dp"
         android:max="20"
         android:progress="10" />
-
-    <Button
-        android:layout_marginStart="300dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/buttonToHome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:text="현위치로" />
-
 </RelativeLayout>
