--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,18 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFFFFF">
+
     <EditText
-        android:background="@drawable/searchingbar_background"
-        android:textSize="20dp"
-        android:elevation="4dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:paddingStart="20dp"
-        android:hint="장소, 버스, 지하철, 주소 검색"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/searchingBar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:id="@+id/searchingBar"/>
-</RelativeLayout>
+        android:layout_marginStart="40dp"
+        android:background="@drawable/searchingbar_2_background"
+        android:hint="장소, 버스, 지하철, 주소 검색"
+        android:textSize="20dp" />
+
+    <ImageButton
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/back"
+        android:id="@+id/backButton"
+        android:layout_width="40dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"/>
+    <View
+        android:id="@+id/line789456"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000000"
+        app:layout_constraintTop_toBottomOf="@id/searchingBar"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        app:layout_constraintTop_toBottomOf="@id/line789456"
+        android:hint="THIS IS FOR TEST"
+        android:textSize="30sp"
+        android:padding="10sp"
+        android:textAlignment="center"
+        android:textColor="@color/hansung_blue"
+        android:id="@+id/tv_forTest"/>
+    <View
+        android:id="@+id/line123456"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000000"
+        app:layout_constraintTop_toBottomOf="@id/tv_forTest"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
