--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -37,17 +37,32 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         app:layout_constraintTop_toBottomOf="@id/line789456"
-        android:hint="THIS IS FOR TEST"
+        android:hint="THIS IS FOR TEST 1"
         android:textSize="30sp"
         android:padding="10sp"
         android:textAlignment="center"
         android:textColor="@color/hansung_blue"
-        android:id="@+id/tv_forTest"/>
-    <View
-        android:id="@+id/line123456"
+        android:id="@+id/tv_forTest1"/>
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000000"
-        app:layout_constraintTop_toBottomOf="@id/tv_forTest"/>
+        android:layout_height="80dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_forTest1"
+        android:hint="THIS IS FOR TEST 2"
+        android:textSize="30sp"
+        android:padding="10sp"
+        android:textAlignment="center"
+        android:textColor="@color/hansung_blue"
+        android:id="@+id/tv_forTest2"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_forTest2"
+        android:hint="THIS IS FOR TEST 3"
+        android:textSize="30sp"
+        android:padding="10sp"
+        android:textAlignment="center"
+        android:textColor="@color/hansung_blue"
+        android:id="@+id/tv_forTest3"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
