--- a/app/src/main/res/layout/activity_place_view.xml
+++ b/app/src/main/res/layout/activity_place_view.xml
@@ -21,7 +21,7 @@
         android:layout_marginStart="0dp"
         android:background="@drawable/searchingbar_2_background"
         android:paddingTop="15dp"
-        android:text="test"
+        android:text="Example Name"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@id/buttonToHome"
         app:layout_constraintStart_toEndOf="@id/backButton"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="한성대학교"
+        android:text="Example Name"
         android:textColor="@color/hansung_blue"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
-        android:text="서울 성북구 어쩌구"
+        android:text="Example Address"
         android:textColor="@color/hansung_grey"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
