ListView에 각 경로를 바인딩 했으나... 아이템 레이아웃을 어떻게 처리할지 난항

--- a/app/src/main/res/layout/fragment_taxi.xml
+++ b/app/src/main/res/layout/fragment_taxi.xml
@@ -9,6 +9,6 @@
         android:layout_height="match_parent"
         android:paddingTop="100dp"
         android:textSize="50sp"
-        android:text="testTextTaxi"
+        android:text="로딩 중..."
         android:textAlignment="center" />
 </androidx.constraintlayout.widget.ConstraintLayout>
