--- a/app/src/main/res/layout/fragment_bus.xml
+++ b/app/src/main/res/layout/fragment_bus.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        android:background="#000000"/>-->
     <TextView
         android:id="@+id/textViewFragmentBus"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="100dp"
         android:textSize="50sp"
-        android:text="testTextBus"
+        android:text="로딩 중..."
         android:textAlignment="center" />
+    <ListView
+        android:id="@+id/ListViewBusFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
