각 경로정보 ListView 아이템에 보이도록 바인딩 완료

--- a/app/src/main/res/layout/list_bus_item.xml
+++ b/app/src/main/res/layout/list_bus_item.xml
@@ -4,43 +4,179 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/firstImage"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:src="@drawable/wheelchair"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        android:id="@+id/testTextBusItem"
+        android:id="@+id/firstTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="5"
+        app:layout_constraintBottom_toBottomOf="@+id/firstImage"
+        app:layout_constraintStart_toEndOf="@+id/firstImage" />
+
+    <TextView
+        android:id="@+id/firstText"
+        android:background="@drawable/rounded_corner"
+        android:layout_width="45dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="1호선"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textViewBusTime"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/firstToward"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/toward"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/secondImage"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:src="@drawable/wheelchair"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/firstToward"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/secondTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="5"
+        app:layout_constraintBottom_toBottomOf="@+id/secondImage"
+        app:layout_constraintStart_toEndOf="@+id/secondImage" />
+    <TextView
+        android:id="@+id/secondText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="1호선"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textViewBusTime"
+        app:layout_constraintStart_toEndOf="@id/firstToward" />
+    <ImageView
+        android:id="@+id/secondToward"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/toward"
+        app:layout_constraintStart_toEndOf="@id/firstToward"
+        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/thirdImage"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
-        android:text="이부분 지금 어캐 해야할지 모르겠음"
+        android:src="@drawable/wheelchair"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/secondToward"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/thirdTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="5"
+        app:layout_constraintBottom_toBottomOf="@+id/thirdImage"
+        app:layout_constraintStart_toEndOf="@+id/thirdImage" />
+    <TextView
+        android:id="@+id/thirdText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="1호선"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textViewBusTime"
+        app:layout_constraintStart_toEndOf="@id/secondToward" />
+    <ImageView
+        android:id="@+id/thirdToward"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/toward"
+        app:layout_constraintStart_toEndOf="@id/secondToward"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewBusTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="50dp"
         android:text="오후 2:00 - 오후 2:58"
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="@id/testTextBusItem"
-        app:layout_constraintTop_toBottomOf="@id/testTextBusItem" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/fourthImage"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:src="@drawable/wheelchair"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/thirdToward"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/fourthTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="5"
+        app:layout_constraintBottom_toBottomOf="@+id/fourthImage"
+        app:layout_constraintStart_toEndOf="@+id/fourthImage" />
+    <TextView
+        android:id="@+id/fourthText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="1호선"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textViewBusTime"
+        app:layout_constraintStart_toEndOf="@id/thirdToward" />
 
     <TextView
         android:id="@+id/textViewBusDuration"
         android:layout_width="wrap_content"
-        android:lines="1"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
+        android:lines="1"
         android:text="nn분"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@id/textViewBusTime"
         app:layout_constraintEnd_toEndOf="parent" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewBusTime"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/textViewBusTime" />
 </androidx.constraintlayout.widget.ConstraintLayout>
