--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">  <!-- 사각형 모양으로 설정 -->
-    <solid android:color="#FFFFFF"/> <!-- 배경색을 흰색으로 설정 -->
+    <solid android:color="#DDDDDD"/> <!-- 배경색을 흰색으로 설정 -->
 
     <!-- 모서리를 둥글게 설정 -->
     <corners android:radius="5dp"/>
