--- a/app/src/main/res/layout/list_item_detail.xml
+++ b/app/src/main/res/layout/list_item_detail.xml
@@ -60,4 +60,14 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/item_tv_body"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="테스트텍스트 가나다"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="@id/item_tv_main"
+        app:layout_constraintTop_toBottomOf="@id/item_tv_main"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
