--- a/app/src/main/res/layout/list_item_detail.xml
+++ b/app/src/main/res/layout/list_item_detail.xml
@@ -69,5 +69,19 @@
         android:text="테스트텍스트 가나다"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="@id/item_tv_main"
-        app:layout_constraintTop_toBottomOf="@id/item_tv_main"/>
+        app:layout_constraintTop_toBottomOf="@id/item_tv_main" />
+
+    <Button
+        android:id="@+id/external_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:text="경로 이미지"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/item_tv_body"
+        app:layout_constraintTop_toBottomOf="@id/item_tv_body" />
 </androidx.constraintlayout.widget.ConstraintLayout>
